--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
